# iot-edge

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  build.rs  config.toml.sample
docker/: Dockerfile.gnu  Dockerfile.musl  build-docker-image.sh
docs/: BUILD.md
schema/: chunk.capnp
scripts/: consumer.py  reqirements.txt  requirements.txt
src/: config.rs  errors.rs  main.rs  utils.rs
src/connect/: can.rs  gps.rs  mod.rs
src/message/: can.rs  gps.rs  mod.rs
src/output/: file.rs  mod.rs  mqtt.rs
