[package]
name = "iot-edge"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.57"
bytesize = "1.1.0"
capnp = "0.14.6"
clap = { version = "3.1.14", features = ["derive"] }
chrono = "0.4"
file-rotate = "0.6.0"
futures = "0.3.21"
futures-util = "0.3"
log = "0.4.17"
pnet = "0.29.0"
rumqttc = "0.13.0"
rust_decimal = "1.23.1"
serdeconv = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.136"
serde_json = "1.0"
socketcan = "1.7.0"
tokio = { version = "1", features = ["full"] }
tokio-socketcan = "0.3.1"
toml = "0.5.9"
unbounded-gpsd = "0.4.4"

[profile.release]
strip="debuginfo"
opt-level = 'z'
lto = true

[build-dependencies]
capnpc = "0.14.7"
